# SHM

./: .clang-format  .gitignore  CMakeLists.txt  cargo-ut.cpp  cargo.cpp  cargo.hpp  coordinates-ut.cpp  coordinates.cpp  coordinates.hpp  island-ut.cpp  island.cpp  island.hpp  map-ut.cpp  map.cpp  map.hpp  player.hpp  ship-ut.cpp  ship.cpp  ship.hpp
.github/workflows/: main.yml
